[gd_scene load_steps=9 format=3 uid="uid://p4pcluefy1gb"]

[ext_resource type="Script" path="res://scripts/HammerWeapon.gd" id="1_rwe2u"]
[ext_resource type="PackedScene" uid="uid://d1ivonlksoprh" path="res://scenes/hammer_attack.tscn" id="2_bsk64"]
[ext_resource type="Script" path="res://Nodes/HitboxComponent.gd" id="2_vjqcw"]
[ext_resource type="Texture2D" uid="uid://t78878fbln1q" path="res://art/sprite sheet/area indicator circle.png" id="4_bl8rw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w6fft"]
radius = 175.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bjnip"]
atlas = ExtResource("4_bl8rw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_avkf4"]
atlas = ExtResource("4_bl8rw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_00d30"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjnip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avkf4")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[node name="HammerWeapon" type="Node2D"]
script = ExtResource("1_rwe2u")
hammer_attack_scene = ExtResource("2_bsk64")
damage = 3.0

[node name="HitboxComponentRight" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8
script = ExtResource("2_vjqcw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponentRight"]
position = Vector2(275, 0)
shape = SubResource("CircleShape2D_w6fft")

[node name="HitboxComponentLeft" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8
script = ExtResource("2_vjqcw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponentLeft"]
position = Vector2(-275, 0)
shape = SubResource("CircleShape2D_w6fft")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(275, 0)
scale = Vector2(9.97, 9.97)
sprite_frames = SubResource("SpriteFrames_00d30")
autoplay = "default"
frame_progress = 0.227972

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(-275, 0)
scale = Vector2(9.97, 9.97)
sprite_frames = SubResource("SpriteFrames_00d30")
autoplay = "default"
frame_progress = 0.227972

[connection signal="area_entered" from="HitboxComponentRight" to="." method="_on_hitbox_component_right_area_entered"]
[connection signal="area_exited" from="HitboxComponentRight" to="." method="_on_hitbox_component_right_area_exited"]
[connection signal="area_entered" from="HitboxComponentLeft" to="." method="_on_hitbox_component_left_area_entered"]
[connection signal="area_exited" from="HitboxComponentLeft" to="." method="_on_hitbox_component_left_area_exited"]
